--- a/web_static/0-index.html
+++ b/web_static/0-index.html
@@ -8,14 +8,14 @@
 </head>
 
 <body style="margin: 0; padding: 0;">
-	<header style="color: #FF0000; height: 70px; width: 100%;">
+	<header style="background-color: #FF0000;height: 70px;width: 100%;">
 
 	</header>
 
-	Best School
-
-	<footer style="color: #00FF00; height: 60px; width: 100%; position:absolute; bottom: 0; text-align: center;">
-
+	<footer style="background-color: #00FF00;height: 60px;width: 100%;
+		position: fixd;bottom: 0; text-align: center;
+		display: flex; align-items: center; justify-content: center;">
+		Best School
 	</footer>
 </body>
 
