--- a/web_static/0-index.html
+++ b/web_static/0-index.html
@@ -1,22 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-	<meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Document</title>
-</head>
-
-<body style="margin: 0; padding: 0;">
-	<header style="background-color: #FF0000;height: 70px;width: 100%;">
-
-	</header>
-
-	<footer style="background-color: #00FF00;height: 60px;width: 100%;
-		position: fixd;bottom: 0; text-align: center;
-		display: flex; align-items: center; justify-content: center;">
-		Best School
-	</footer>
-</body>
-
+    <head>
+        <title>AirBnB Clone</title>
+    </head>
+    <body style="margin:0;padding:0;">
+        <header style="background-color: #FF0000; height: 70px; width: 100%;"></header>
+        <!-- <footer style="background-color: #FF0000; height: 60px; width: 100%; position: fixed; bottom: 0; display: flex; justify-content: center; line-height: 60px;">Best School</footer> -->
+        <footer style="background-color: #00FF00; height: 60px; width: 100%; position: absolute; bottom: 0; text-align: center; line-height: 60px;">Best School</footer>
+    </body>
 </html>
